services/ai-platform-api/k8s/ingress/networkpolicy-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-nginx-to-ai-platform-api
  namespace: ai-platform

spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: ai-platform-api

  policyTypes:
    - Ingress

  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ingress-nginx

          podSelector:
            matchLabels:
              app.kubernetes.io/component: controller
              app.kubernetes.io/name: ingress-nginx

      ports:
        - protocol: TCP
          port: 8001
